[package]
name = "vrsmsz"
version = "1.2.0"
authors = ["hertz <binhe@mail.ustc.edu.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glib = { git = "https://github.com/gtk-rs/glib" }
glib-sys = { git = "https://github.com/gtk-rs/sys" }
gobject-sys = { git = "https://github.com/gtk-rs/sys" }
gstreamer = { path = "../../gstreamer-rs/gstreamer" }
gstreamer-gl = { path = "../../gstreamer-rs/gstreamer-gl", optional = true }
gstreamer-app = { path = "../../gstreamer-rs/gstreamer-app" }
gstreamer-audio = { path = "../../gstreamer-rs/gstreamer-audio" }
gstreamer-base = { path = "../../gstreamer-rs/gstreamer-base" }
gstreamer-video = { path = "../../gstreamer-rs/gstreamer-video" }
gstreamer-pbutils = { path = "../../gstreamer-rs/gstreamer-pbutils" }
